v 1.4.8.0 (?? may 2020)
Major:
* Fix precrafted amount

Minor:
* Gear icon will now have a toggle indicator
* Fix options dialog overflow
* Clear up checkbox indicators
* Clear up chat/log slightly

v 1.4.7.1 (19 apr 2020)
Major:
* Allow to burn paragon without breaking Iron Will mode if insane Space Oddity has already been achieved
* Improve kittens' save compression
* Make Hydroponics increase kittens capacity of Terraforming Stations
* Fix Solar Farms not being affected by Winter Has Come
* Do not refund AM if energy is negative

Themes:
* New themes: Gold, Space, Wood, School, Fluid, Vessel, Minimalist, Oil
* All themes except Classic and Inverted have to be unlocked (permanent unlock)
* Add an option in order to hide background image (if applicable)
* Theme will now apply to the loading screen

Minor:
* Add confirmation pop-up for present box unwrapping
* Improve contrast of text in sub-buttons
* Display energy in orange if it will be negative in winter
* Fix kittens per tick rate
* Add special effect on exotic resources and on 777 and 1337
* Fix gflops consumption display
* Always display science tab if you have the calendar or chronophysics sciences
* Use titanium' and blueprints' translated name in trade messages
* Move 'return empty-pawed' below the corresponding 'sent x trades' message and remove its bullet
* Fix Chrono Furnace state when exporting save from web to mobile
* Fix base skill XP not being multiplied by number of ticks in case of offline progression
* Remove regular faith consumption by OotV, making it a pure bonus as originally implemented
* Fix confusion about regular faith in left column vs. accumulated faith in Order of the Sun panel (all languages)
* Fix a lot of visual issues related to large resource values, layout and localization
* Saves bigger than 5MB should now fit into the localstorage
* Add option for even better compression, but generates save files incompatible with older versions