@@ -1,6 +1,7 @@
 v 1.4.8.0 (?? may 2020)
 Major:
 * Fix precrafted amount
+* Implement Metallurgist and Chemist traits
 
 Minor:
 * Gear icon will now have a toggle indicator
